[tool.poetry]
name = "cmdict"
version = "0.1.2"
description = "A command line dictionary toolset"
authors = ["zequnyu <zequnyu11@gmail.com>", "edxu96 <edxu96@outlook.com>"]
license = "GPL-3.0"
exclude = ["src/cmdict/data/*"]

[tool.poetry.scripts]
cmdict = 'cmdict:run_script.cli'
cmdicts = 'cmdict:run_script.search'

[tool.poetry.dependencies]
python = "^3.6.1"
loguru = "^0.5.1"
click = "^7.1.2"
colorama = "^0.4.3"
PyMuPDF = "^1.17.3"
requests = "^2.24.0"
tqdm = "^4.48.0"
pyyaml = "^5.3.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.4.0"
flake8 = "^3.8.2"
black = "^19.10b0"
pytest = "^5.4.2"
pytest-cov = "^2.9.0"
pytest-xdist = "^1.32.0"
darglint = "^1.4.1"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
