[tool.poetry]
name = "cmdict"
version = "0.1.3"
description = "A command line dictionary toolset."
authors = ["zequnyu <zequnyu11@gmail.com>", "edxu96 <edxu96@outlook.com>"]
license = "GPL-3.0"
exclude = ["src/cmdict/data/*"]
readme = "README.md"
repository = "https://github.com/pasty-dev/cmdict"

[tool.poetry.scripts]
cmdict = 'cmdict:run_script.cli'
cmdicts = 'cmdict:run_script.search'

[tool.poetry.dependencies]
python = "^3.7.0"
loguru = "^0.5.1"
click = "^7.1.2"
colorama = "^0.4.3"
requests = "^2.24.0"
tqdm = "^4.48.0"
pyyaml = "^5.3.1"

[tool.poetry.group.pdf]
optional = true

[tool.poetry.group.pdf.dependencies]
PyMuPDF = "1.22.3"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.9.2"
pytest = "^7.0.0"
pytest-cov = "^2.9.0"
pytest-xdist = "^1.32.0"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry>=1.2.0a1"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
minversion = "7.0"
pythonpath = ["src"]  # https://stackoverflow.com/a/50610630/10181743
testpaths = ["tests"]
